--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "main": "./lib",
   "dependencies": {
-    "passport-oauth2": "1.x.x"
+    "passport-oauth2": "nachoesmite/passport-oauth2#master"
   },
   "devDependencies": {
     "make-node": "0.3.x",
